<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Earthquake</string>

    <string name="menu_item_refresh">Refresh</string>
    <string name="menu_item_settings">Settings</string>
    <string name="pref_is_first">key_is_first</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_place">Place</string>

    <string name="google_maps_API_key">AIzaSyDX1waV4R2Lj9gdM-_itzWK8GWQaAwBolg</string>

    <string name="main_notification_channel_name" translatable="false">Primary</string>
    <string name="earthquake_reminder_notification_title">"Data's updated "</string>
    <string name="earthquake_reminder_notification_body">Now your earthquake data is up to dated!</string>
    <string name="earthqauke_event_reminder_notification_title">"Critical Earthquake"</string>
    <string name="earthquake_event_reminder_notification_body_first">"Critical earthquake just happened on "</string>
    <string name="earthquake_event_reminder_notification_body_second">" 's city: "</string>

    <!--Side Navigation Bar-->
    <string name="nav_home_title">Home</string>
    <string name="nav_map_title">Map view</string>
    <string name="nav_share_title">Share</string>
    <string name="nav_send_title">Send</string>
    <string name="nav_info_title">About...</string>
    <string name="nav_sub_title">Communicate</string>
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>


    <string name="person_gender_male">Male</string>
    <string name="person_gender_female">Female</string>
    <string name="person_add_title">Add someone</string>

    <!--Register Activity    -->
    <string name="register_title">Register</string>
    <string name="name_hint">Name</string>
    <string name="surname_hint">Surname</string>
    <string name="relation_hint">Relation</string>
    <string name="btn_submit">Submit</string>

</resources>
