<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home_title" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map"
            android:title="@string/nav_map_title" />
        <item
            android:id="@+id/nav_person"
            android:icon="@drawable/ic_person"
            android:title="Add person" />
        <item
            android:id="@+id/nav_hazardous"
            android:icon="@drawable/ic_hazardous_event"
            android:title="Risky earthquakes" />
    </group>

    <item android:title="@string/nav_sub_title">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:title="@string/nav_share_title" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_send"
                android:title="@string/nav_send_title" />
            <item
                android:id="@+id/nav_info"
                android:icon="@drawable/ic_info"
                android:title="@string/nav_info_title" />
        </menu>
    </item>
</menu>